# sentinel

./: CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: release.yml
.github/workflows/: publish.yml  release.yml
app/: build.gradle.kts
core/: build.gradle.kts
gradle/: libs.versions.toml
gradle/publish/: sentinel.gradle
gradle/wrapper/: gradle-wrapper.properties
kit/: build.gradle.kts
kit/debug/: build.gradle.kts
kit/emulator/: build.gradle.kts
kit/hook/: build.gradle.kts
kit/location/: build.gradle.kts  proguard-rules.pro
kit/root/: build.gradle.kts
kit/root/src/main/cpp/: CMakeLists.txt
kit/tamper/: build.gradle.kts
sample/android/: build.gradle.kts
sentinel/: build.gradle.kts  consumer-proguard-rules.pro  proguard-rules.pro
sentinel-benchmark/: build.gradle.kts
sentinel-core/: build.gradle.kts
sentinel-core/api/: sentinel-core.klib.api
sentinel-identity/: build.gradle.kts
sentinel-identity/api/: sentinel-identity.klib.api
sentinel-kit/detector/: build.gradle.kts
sentinel-kit/kni/: build.gradle.kts  gradle.properties
sentinel-kit/ndk/: build.gradle.kts
sentinel-kit/ndk/src/main/cpp/: CMakeLists.txt  sentinel-debugger.cpp  sentinel-emulator.cpp  sentinel-hook.cpp  sentinel-root.cpp  sentinel-tamper.cpp
sentinel-monitor/: build.gradle.kts  gradle.properties
sentinel-monitor/api/: sentinel-monitor.klib.api
sentinel-runtime/: build.gradle.kts  gradle.properties
sentinel-ui/: build.gradle.kts
ui/: build.gradle.kts
(+151 files in other folders)
